[package]
name = "fetch-maybe"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "2"
filetime = "0.2"
tempfile-fast = "0.3"
ureq = "0.11"
pretty_env_logger = "0.3"
log = "0.4.8"

[dependencies.failure]
version = "0.1"
default-features = false
features = ["std"]

[profile.release]
lto = true
